--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,13 @@
+[build-system]
+requires = [
+  "setuptools >= 64.0.0",
+  "setuptools_scm[toml] >= 7.0.5",
+]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "molecule_multipass"
-version = "0.1.1"
+version = "0.1.0"
 description = "Molecule Multipass"
 authors = [{ "name" = "Andrey Gubarev", "email" = "andrey@andreygubarev.com" }]
 
