--- a/molecule_multipass/playbooks/create.yml
+++ b/molecule_multipass/playbooks/create.yml
@@ -6,6 +6,10 @@
 
   vars:
     multipass_vm_name: "instance"
+    multipass_vm_cpus: 1
+    multipass_vm_memory: 1024M
+    multipass_vm_disk: 4G
+    multipass_vm_image: "20.04"
     temp_folder: "/tmp"
 
   tasks:
@@ -18,7 +22,25 @@
       ansible.builtin.set_fact:
         multipass_cmd: "{{ multipass_path.stdout }}"
 
+    - name: Generate OpenSSH key pair
+      community.crypto.openssh_keypair:
+        path: "{{ temp_folder }}/id_ed25519"
+        type: ed25519
+      register: multipass_ssh
+      delegate_to: "localhost"
+
     - name: Create cloud-init from template
       ansible.builtin.template:
         src: "templates/cloud-init.yml.j2"
         dest: "{{ temp_folder }}/cloud-init.yml"
+
+    - name: Launch instance
+      ansible.builtin.command: >
+        {{ multipass_cmd }} launch
+        --name {{ multipass_vm_name }}
+        --cpus {{ multipass_vm_cpus }}
+        --memory {{ multipass_vm_memory }}
+        --disk {{ multipass_vm_disk }}
+        --cloud-init {{ temp_folder }}/cloud-init.yml
+        {{ multipass_vm_image }}
+      register: multipass_instance
