--- a/molecule_multipass/playbooks/destroy.yml
+++ b/molecule_multipass/playbooks/destroy.yml
@@ -4,4 +4,31 @@
   gather_facts: false
   no_log: "{{ molecule_no_log }}"
 
-  tasks: []
+  vars:
+    multipass_executable: "multipass"
+
+  tasks:
+    - name: Get multipass executable path
+      ansible.builtin.shell: "command -v {{ multipass_executable }}"
+      register: multipass_path
+      changed_when: false
+
+    - name: Register multipass executable path
+      ansible.builtin.set_fact:
+        multipass_cmd: "{{ multipass_path.stdout }}"
+
+    - block:
+        - name: Prepare VMs config
+          set_fact:
+            instance_conf: "{{ lookup('file', molecule_instance_config) | from_yaml }}"
+      rescue:
+        - name: Prepare VMs config when file missing
+          set_fact:
+            instance_conf: {}
+
+    - name: Destroy VMs
+      ansible.builtin.command: >
+        {{ multipass_cmd }} delete --purge {{ item.instance }}
+      loop: "{{ instance_conf }}"
+      loop_control:
+        label: "{{ item.instance }}"
