--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,5 +16,8 @@ license = { text = "MIT" }
 
 dependencies = ["molecule >= 5.0"]
 
+[project.urls]
+Homepage = "https://github.com/andreygubarev/molecule-multipass/"
+
 [project.entry-points."molecule.driver"]
 molecule_multipass = "molecule_multipass.driver:Multipass"
