--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,7 @@
 requires = [
   "setuptools >= 64.0.0",
   "setuptools_scm[toml] >= 7.0.5",
+  "wheel",
 ]
 build-backend = "setuptools.build_meta"
 
