--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -2,10 +2,8 @@ name: Release Drafter
 
 on:
   push:
-    branches:
-      - main
-  pull_request:
-    types: [opened, reopened, synchronize]
+    tags:
+      - '*'
 
 permissions:
   contents: read
@@ -16,6 +14,7 @@ jobs:
       contents: write
       pull-requests: write
     runs-on: ubuntu-latest
+
     steps:
       - uses: release-drafter/release-drafter@v5
         env:
