--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,4 +1,5 @@
+name-template: "v$RESOLVED_VERSION"
+tag-template: "v$RESOLVED_VERSION"
+change-template: "- $TITLE (#$NUMBER) @$AUTHOR"
 template: |
-  ## What’s Changed
-
   $CHANGES
