--- a/molecule_multipass/cookiecutter/{{cookiecutter.molecule_directory}}/{{cookiecutter.scenario_name}}/prepare.yml
+++ b/molecule_multipass/cookiecutter/{{cookiecutter.molecule_directory}}/{{cookiecutter.scenario_name}}/prepare.yml
@@ -1,6 +1,7 @@
 ---
 - name: Prepare
   hosts: all
+  become: true
   tasks:
     - name: Update available packages
       ansible.builtin.raw: apt update -yq
