--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,9 +15,15 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      - name: Check if pre-release
+        id: prerelease
+        run: |
+          echo "::set-output name=prerelease::$(if [[ "${{ github.ref }}" == *"rc"* ]]; then echo "true"; else echo "false"; fi)"
+
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
           draft: true
+          prerelease: ${{ steps.prerelease.outputs.is_prerelease }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
