remove deprecated env and add generate release notes

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,5 +25,4 @@ jobs:
         with:
           draft: true
           prerelease: ${{ steps.prerelease.outputs.prerelease }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          generate_release_notes: true
