update instance naming convention

--- a/molecule_multipass/playbooks/create.yml
+++ b/molecule_multipass/playbooks/create.yml
@@ -15,6 +15,25 @@
     multipass_vm_image: "20.04"
 
   tasks:
+    - name: Register VMs data
+      ansible.builtin.set_fact:
+        instance: {
+          "instance": "molecule-{{ molecule_project_name }}-{{ molecule_scenario_name }}-{{ item.name }}",
+          "name": "{{ item.name }}",
+          "vm_cpus": "{{ item.vm_cpus | default(multipass_vm_cpus) }}",
+          "vm_memory": "{{ item.vm_memory | default(multipass_vm_memory) }}",
+          "vm_disk": "{{ item.vm_disk | default(multipass_vm_disk) }}",
+          "vm_image": "{{ item.vm_image | default(multipass_vm_image) }}",
+        }
+      loop: "{{ molecule_yml.platforms }}"
+      loop_control:
+        label: "{{ item.name }}"
+      register: molecule_instances
+
+    - name: Prepare VMs data
+      ansible.builtin.set_fact:
+        molecule_instances: "{{ molecule_instances.results | map(attribute='ansible_facts.instance') | list }}"
+
     - name: Get multipass executable path  # noqa: command-instead-of-shell
       ansible.builtin.shell: "command -v {{ multipass_executable }}"
       register: multipass_path
@@ -39,13 +58,13 @@
     - name: Launch VMs  # noqa: no-changed-when
       ansible.builtin.command: >
         {{ multipass_cmd }} launch
-        --name {{ item.name }}
-        --cpus {{ item.vm_cpus | default(multipass_vm_cpus) }}
-        --memory {{ item.vm_memory | default(multipass_vm_memory) }}
-        --disk {{ item.vm_disk | default(multipass_vm_disk) }}
+        --name {{ item.instance }}
+        --cpus {{ item.vm_cpus }}
+        --memory {{ item.vm_memory }}
+        --disk {{ item.vm_disk }}
         --cloud-init {{ molecule_ephemeral_directory }}/cloud-init.yml
         {{ item.vm_image | default(multipass_vm_image) }}
-      loop: "{{ molecule_yml.platforms }}"
+      loop: "{{ molecule_instances }}"
       loop_control:
         label: "{{ item.name }}"
       async: 7200
@@ -67,8 +86,8 @@
       ansible.builtin.command: >
         {{ multipass_cmd }} info
         --format json
-        {{ item.name }}
-      loop: "{{ molecule_yml.platforms }}"
+        {{ item.instance }}
+      loop: "{{ molecule_instances }}"
       loop_control:
         label: "{{ item.name }}"
       register: instance_info
@@ -80,13 +99,14 @@
     - name: Prepare VMs config dict
       ansible.builtin.set_fact:
         instance_conf_dict: {
-          "instance": "{{ item.name }}",
-          "address": "{{ instance_info[item.name].ipv4[0] }}",
+          "instance": "{{ item.instance }}",
+          "name": "{{ item.name }}",
+          "address": "{{ instance_info[item.instance].ipv4[0] }}",
           "user": "ubuntu",
           "port": "22",
           "identity_file": "{{ multipass_ssh.filename }}",
         }
-      loop: "{{ molecule_yml.platforms }}"
+      loop: "{{ molecule_instances }}"
       loop_control:
         label: "{{ item.name }}"
       register: instance_config_dict
